--- a/crates/node_app/Cargo.toml
+++ b/crates/node_app/Cargo.toml
@@ -28,6 +28,8 @@ serde = { workspace = true }
 toml = { workspace = true }
 uuid = { workspace = true }
 axum = { workspace = true }
+rusqlite = { workspace = true }
+serde_json = { workspace = true }
 
 [dev-dependencies]
 tempfile = { workspace = true }
