Wire mesh into node_app: TCP server, mDNS, peer consult, replication loop
- node_app main.rs boots TCP+mTLS mesh server, mDNS discovery,
  envelope handler (PING/PONG, HELLO, ASK/ANSWER), and periodic
  replication loop on startup
- /ask endpoint consults peers over real TCP transport when local
  confidence is low, using the best peer answer if available
- AppState gains transport + consult_config fields for mesh integration
- Node identity derived from DevCa certificate fingerprint
- 4 new end-to-end integration tests in node_app/tests/e2e_mesh.rs
- 159 tests, 0 failures, 0 clippy warnings

Made-with: Cursor

--- a/crates/node_app/Cargo.toml
+++ b/crates/node_app/Cargo.toml
@@ -30,6 +30,11 @@ uuid = { workspace = true }
 axum = { workspace = true }
 rusqlite = { workspace = true }
 serde_json = { workspace = true }
+mdns-sd = { workspace = true }
+prost = { workspace = true }
 
 [dev-dependencies]
 tempfile = { workspace = true }
+tower = "0.5"
+http-body-util = "0.1"
+node_ai_mock = { path = "../node_ai_mock" }
