Phase 0-1 (v2 spec): Add 5 new crates, extend protos for discovery/ingestion/datasets/federated
- New crate stubs: node_discovery, node_connectors, node_ingest, node_datasets, node_federated
- events.proto: 10 new EventType values (DATA_SOURCE_DISCOVERED/CLASSIFIED/APPROVED,
  INGEST_STARTED/COMPLETED, DATASET_MANIFEST_CREATED, TRAIN_DELTA_PUBLISHED/APPLIED,
  FEDERATED_ROUND_STARTED/COMPLETED) + ConnectorType enum + DOCUMENT/FACT ArtifactTypes
- datasets.proto: DiscoveredSource, ColumnClassification, SchemaSnapshot, SourceProfile,
  TableRule, RedactionPolicy, RetentionPolicy, DatasetManifest, IngestCheckpoint, IngestBatch
- federated.proto: FederatedRoundConfig, ModelDelta, AggregateResult, RoundParticipant
- training.proto: extended DatasetManifest, EvalGate, EvalResult
- 25 new serialization tests (49 total in node_proto)
- Projector handles all new event types (audit-only for now)
- 184 tests, 0 failures, 0 clippy warnings across 18 crates

Made-with: Cursor

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,7 +11,12 @@ members = [
     "crates/node_ai_ollama",
     "crates/node_ai_mock",
     "crates/node_research",
+    "crates/node_discovery",
+    "crates/node_connectors",
+    "crates/node_ingest",
+    "crates/node_datasets",
     "crates/node_trainer",
+    "crates/node_federated",
     "crates/node_api",
     "crates/node_app",
 ]
@@ -84,6 +89,11 @@ node_ai = { path = "crates/node_ai" }
 node_ai_ollama = { path = "crates/node_ai_ollama" }
 node_ai_mock = { path = "crates/node_ai_mock" }
 node_research = { path = "crates/node_research" }
+node_discovery = { path = "crates/node_discovery" }
+node_connectors = { path = "crates/node_connectors" }
+node_ingest = { path = "crates/node_ingest" }
+node_datasets = { path = "crates/node_datasets" }
 node_trainer = { path = "crates/node_trainer" }
+node_federated = { path = "crates/node_federated" }
 node_api = { path = "crates/node_api" }
 node_app = { path = "crates/node_app" }
