--- a/crates/node_api/Cargo.toml
+++ b/crates/node_api/Cargo.toml
@@ -18,6 +18,7 @@ thiserror = { workspace = true }
 tracing = { workspace = true }
 rusqlite = { workspace = true }
 async-trait = "0.1"
+uuid = { workspace = true }
 
 [dev-dependencies]
 tempfile = { workspace = true }
