Phase 16: Internet Mode - rendezvous + relay for WAN connectivity
- Added relay.proto with register, heartbeat, discover, and relay frame
  protocol for WAN peer-to-peer communication
- Created node_relay crate: RelayDirectory for peer registration,
  handle_frame protocol handler, mTLS relay server (10 tests)
- Added RelayTransport to node_mesh: register, discover, heartbeat,
  and envelope forwarding via relay server
- Added HybridTransport: tries direct TCP first, falls back to relay
- Integrated WAN discovery loop and relay heartbeat in node_app
- Added config options: relay_addr, relay_port, relay_only, public_addr
- 246 tests, 0 failures, 0 clippy warnings across 19 crates

Made-with: Cursor

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -17,6 +17,7 @@ members = [
     "crates/node_datasets",
     "crates/node_trainer",
     "crates/node_federated",
+    "crates/node_relay",
     "crates/node_api",
     "crates/node_app",
 ]
@@ -95,5 +96,6 @@ node_ingest = { path = "crates/node_ingest" }
 node_datasets = { path = "crates/node_datasets" }
 node_trainer = { path = "crates/node_trainer" }
 node_federated = { path = "crates/node_federated" }
+node_relay = { path = "crates/node_relay" }
 node_api = { path = "crates/node_api" }
 node_app = { path = "crates/node_app" }
