Extended source scanning: images, documents, CORS, ingestion pipeline
- Add IMAGE_FOLDER and DOCUMENT_FOLDER connector types to proto schema
- Implement ImageConnector with EXIF/GPS metadata extraction (kamadak-exif)
- Implement DocumentConnector for PDF, DOCX, TXT, Markdown text extraction
- Extend node_discovery to detect image and document folders on disk
- Add CORS support to API server for browser frontend access
- Add /admin/scan endpoint to trigger source discovery from UI
- Add /admin/ingest endpoint to run full ingestion on approved sources
- Auto-scan ~/Documents, ~/Pictures, ~/Desktop, ~/Downloads directories
- Flag GPS coordinates and file paths as PII in column classifier
- Wire Scan Sources, Approve, and Ingest buttons in the Tauri UI
- Add 13 new unit tests (259 total across workspace, all passing)

Made-with: Cursor

--- a/crates/node_api/Cargo.toml
+++ b/crates/node_api/Cargo.toml
@@ -9,6 +9,9 @@ node_storage = { workspace = true }
 node_ai = { workspace = true }
 node_policy = { workspace = true }
 node_mesh = { workspace = true }
+node_discovery = { workspace = true }
+node_connectors = { path = "../node_connectors" }
+node_ingest = { path = "../node_ingest" }
 axum = { workspace = true }
 tokio = { workspace = true }
 serde = { workspace = true }
@@ -19,6 +22,7 @@ tracing = { workspace = true }
 rusqlite = { workspace = true }
 async-trait = "0.1"
 uuid = { workspace = true }
+tower-http = { version = "0.6", features = ["cors"] }
 
 [dev-dependencies]
 tempfile = { workspace = true }
