Searchable data pipeline, chat conversations, OneDrive scanning
- Add summary field to ArtifactPublished proto and artifacts_view schema
- Unified FTS5 search across cases and artifacts with natural language query support
- RAG context in /ask endpoint now includes artifact summaries
- ChatGPT-style conversation UI: persistent chats, message history, cross-session context
- New conversation API endpoints (CRUD + multi-turn chat with RAG)
- conversations_view, messages_view, messages_fts tables for chat persistence
- Add OneDrive to default scan directories
- Updated system prompts for better AI persona handling

Made-with: Cursor

--- a/crates/node_api/Cargo.toml
+++ b/crates/node_api/Cargo.toml
@@ -12,6 +12,8 @@ node_mesh = { workspace = true }
 node_discovery = { workspace = true }
 node_connectors = { path = "../node_connectors" }
 node_ingest = { path = "../node_ingest" }
+node_trainer = { workspace = true }
+node_datasets = { workspace = true }
 axum = { workspace = true }
 tokio = { workspace = true }
 serde = { workspace = true }
