Security hardening, mesh networking fixes, UI improvements, training pipeline
Security:
- Add Bearer token auth middleware on all /admin/* endpoints
- Lock CORS to localhost origins only (ports 9900, 1420, 5173)
- Redact admin_token and relay_token from info-level logs
- Structured ApiError type replaces raw (StatusCode, String) tuples

Mesh Networking:
- Fix dual PeerDirectory bug: mDNS and API now share same Arc<RwLock<PeerDirectory>>
- Persistent node identity: CA + cert saved to disk, reloaded on restart
- Compose HybridTransport (direct-first, relay-fallback) in main.rs
- Fix relay forwarding: set relay_tx on peer after registration
- Wire pull-based gossip replication via HTTP /repl/gossip and /repl/pull endpoints
- Parallel peer consultation using tokio::spawn instead of sequential loop
- Add GossipPull/GossipPush message types to mesh.proto

UI:
- Markdown rendering for assistant chat messages (via marked.js)
- Search bar in chat sidebar to filter conversations
- Approve All / Ingest All bulk action buttons on Sources page

Training:
- POST /admin/train/export: JSONL dataset export from event log
- POST /admin/train/modelfile: Ollama Modelfile generation

Other:
- Optimize seed loader from O(n*m) to O(n) with HashSet
- Log warning when falling back to mock backend
- Fix NaN panic risk in consult.rs partial_cmp
- Fix Tauri CSP to allow API connection on port 9900

Made-with: Cursor

--- a/crates/node_api/Cargo.toml
+++ b/crates/node_api/Cargo.toml
@@ -14,6 +14,8 @@ node_connectors = { path = "../node_connectors" }
 node_ingest = { path = "../node_ingest" }
 node_trainer = { workspace = true }
 node_datasets = { workspace = true }
+node_repl = { workspace = true }
+hex = { workspace = true }
 axum = { workspace = true }
 tokio = { workspace = true }
 serde = { workspace = true }
@@ -23,6 +25,7 @@ thiserror = { workspace = true }
 tracing = { workspace = true }
 rusqlite = { workspace = true }
 async-trait = "0.1"
+prost = { workspace = true }
 uuid = { workspace = true }
 tower-http = { version = "0.6", features = ["cors"] }
 
