--- a/crates/node_app/Cargo.toml
+++ b/crates/node_app/Cargo.toml
@@ -33,6 +33,7 @@ rusqlite = { workspace = true }
 serde_json = { workspace = true }
 mdns-sd = { workspace = true }
 prost = { workspace = true }
+reqwest = { workspace = true }
 
 [dev-dependencies]
 tempfile = { workspace = true }
