--- a/ui/package.json
+++ b/ui/package.json
@@ -10,7 +10,8 @@
     "tauri": "tauri"
   },
   "dependencies": {
-    "@tauri-apps/api": "^2.0.0"
+    "@tauri-apps/api": "^2.0.0",
+    "marked": "^17.0.3"
   },
   "devDependencies": {
     "@tauri-apps/cli": "^2.0.0",
